[package]
name = "ltorrent-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.11", features = ["derive"] }
ltorrent = { path = "../ltorrent-lib" }
tokio = { version = "1.23.0", features = ["full"] }
hex = "0.4.3"
