[package]
name = "ltorrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_bencode = "0.2.4"
serde_json = "1.0.120"
anyhow = "1.0.86"
hex = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
bytes = "1.6.1"